Set up the skeleton for using rarmadillo

--- a/covarianceSelection/NAMESPACE
+++ b/covarianceSelection/NAMESPACE
@@ -26,3 +26,7 @@ export(stepdown)
 export(stepdown_choose)
 export(stepdown_path)
 export(symbol_synonyms)
+
+importFrom(Rcpp, evalCpp)
+
+useDynLib(covarianceSelection)
