Got the rcpp setup to work, going to start implementing

--- a/covarianceSelection/DESCRIPTION
+++ b/covarianceSelection/DESCRIPTION
@@ -20,8 +20,9 @@ Imports:
     hash,
     binaryLogic,
     dequer,
-    mgcv
+    mgcv,
+    Rcpp
 Suggests:
     testthat
 LinkingTo: Rcpp, RcppArmadillo
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
