--- a/covarianceSelection/NAMESPACE
+++ b/covarianceSelection/NAMESPACE
@@ -16,6 +16,7 @@ export(graphicalModel_form)
 export(graphicalModel_store)
 export(hmrf)
 export(matching)
+export(nonparanormal_transformation)
 export(pairwise_test)
 export(regroup)
 export(report_results)
