Fixing some minor things

--- a/covarianceSelectionTmp/NAMESPACE
+++ b/covarianceSelectionTmp/NAMESPACE
@@ -27,3 +27,5 @@ export(stepdown)
 export(stepdown_choose)
 export(stepdown_path)
 export(symbol_synonyms)
+useDynLib(covarianceSelectionTmp)
+importFrom(Rcpp, evalCpp)
