Adding a tmp function for more realistic timing

--- a/covarianceSelectionTmp/NAMESPACE
+++ b/covarianceSelectionTmp/NAMESPACE
@@ -4,6 +4,8 @@ export(adj_to_graph)
 export(binning)
 export(cai_test)
 export(clique_selection)
+export(compute_all_numerator_bootstrap_tmp1)
+export(compute_all_numerator_bootstrap_tmp2)
 export(compute_scale_free)
 export(count_neighbors)
 export(enrichment_test)
