--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,4 @@
 *.png binary
 *.jpg binary
 data/newGenexp.RData filter=lfs diff=lfs merge=lfs -text
+newGenexp.RData filter=lfs diff=lfs merge=lfs -text
